# la_assistant

./: .gitignore  app.py  docker-compose.yml  pyproject.toml  readme.md
la-assistant/: __init__.py  schema.sql
la_assistant/: __init__.py  auth.py  database.py  db.py  extensions.py  schema.sql  user.py  vocabulary.py  word-list-de.csv
la_assistant/blueprints/: __init__.py  auth.py  user.py  vocabulary.py
la_assistant/models/: __init__.py  mistake.py  user.py  user_vocabulary.py  vocabulary.py
migrations/versions/: b13d914ce862_initial_migration.py
models/: __init__.py
tests/: conftest.py  data.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_user.py  test_vocabulary.py
